# block_matrix_multiplication

./: .gitignore  README.md  matrix.cpp  matrix.h
BlockMatrixMultiplication/BlockMatrixMultiplication.xcodeproj/: project.pbxproj
BlockMatrixMultiplication/BlockMatrixMultiplication.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BlockMatrixMultiplication/BlockMatrixMultiplication.xcodeproj/project.xcworkspace/xcuserdata/alexey.xcuserdatad/: UserInterfaceState.xcuserstate
BlockMatrixMultiplication/BlockMatrixMultiplication.xcodeproj/xcuserdata/alexey.xcuserdatad/xcschemes/: xcschememanagement.plist
additional_scripts/: matrix_multiplication.py
app/: CMakeLists.txt  config.h  main.cpp
compilation/: test.py
configuration/: config.h
libs/: block.cpp  block.h  block_matrix.cpp  block_matrix.h  logging.cpp  logging.h  matrix.cpp  matrix.h
matrix_generator/: matrix_generator.py
